video box alignment fix

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -20,5 +20,5 @@ h1 a {
 .main-container {
   justify-content: center;
   padding: 20px;
-  max-width: 600px;
+  max-width: 560px;
 }
